Remove width from social icons in post footer to stop them wrapping onto two lines.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1242,7 +1242,6 @@ body:not(.post-template) .post-title {
     position: absolute;
     top: 6rem;
     right: 0;
-    width: 180px;
 }
 
 .post-footer .share a {
